--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   },
   "dependencies": {
     "@hapi/boom": "^9.1.4",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.18.0"
   }
 }
